--- a/WebApplication4/Content/Site.css
+++ b/WebApplication4/Content/Site.css
@@ -2,6 +2,8 @@
     background-image: url(img/sides2.png);
 }
 
+
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     margin: auto;
@@ -115,6 +117,21 @@ textarea {
 }
 
 
+/*account manage area*/
+.accheader {
+    text-align: center;
+    align-content: center;
+    margin: auto;
+    padding-top: 10px;
+    
+}
+
+.accinfo {
+    text-align: center;
+    align-content: center;
+    margin: auto;
+   
+}
 
 
 
