--- a/WebApplication4/Views/SurveyGiver/Create.cshtml
+++ b/WebApplication4/Views/SurveyGiver/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    var UserName = ViewBag.UserName;
 }
 @{
     Layout = "_Layoutgiver.cshtml";
@@ -21,6 +22,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                
                 @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
             </div>
