Creating a survey now automatically set the user as the Current User.

--- a/WebApplication4/Views/SurveyQuestions/Create.cshtml
+++ b/WebApplication4/Views/SurveyQuestions/Create.cshtml
@@ -23,7 +23,7 @@
             @Html.LabelFor(model => model.SurveyID, "Survey", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @SurveyName
-                <input type="hidden" , name="SurveyID" value="@SurveyIDs" />
+                <input type="hidden" name="SurveyID" value="@SurveyIDs" />
             </div>
         </div>
     }
