--- a/WebApplication4/Views/Surveys/Create.cshtml
+++ b/WebApplication4/Views/Surveys/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    string MyUserID = ViewBag.UserID;
 }
 @{
     Layout = "_Layoutgiver.cshtml";
@@ -19,10 +20,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserID, "User", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+                <input type="hidden" id="UserID" , name="UserID" value="@MyUserID" />
+                @User.Identity.Name
             </div>
         </div>
 
