--- a/WebApplication4/Views/SurveyTaker/Index.cshtml
+++ b/WebApplication4/Views/SurveyTaker/Index.cshtml
@@ -6,9 +6,7 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
@@ -48,8 +46,8 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.SurveyID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SurveyID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SurveyID })
+            @Html.ActionLink("Details", "Details", new { id=item.SurveyID }) 
+            
         </td>
     </tr>
 }
