--- a/WebApplication4/Views/Surveys/EditQuestionsField.cshtml
+++ b/WebApplication4/Views/Surveys/EditQuestionsField.cshtml
@@ -3,6 +3,9 @@
 @{
     int id = ViewBag.SurveyID;
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <table class="table">
     <tr>
@@ -15,25 +18,28 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Text)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TypeEnum.TypeName)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit/" + item.QuestionID, "SurveyQuestions") |
+                @Html.ActionLink("Details", "Details/" + item.QuestionID, "SurveyQuestions") |
+                @Html.ActionLink("Delete", "Delete/" + item.QuestionID, "SurveyQuestions")
+            </td>
+        </tr>
+    }
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Text)
+        <td colspan="3">
+            <p>
+                @Html.ActionLink("Create New", "Create/" + id, "SurveyQuestions")
+            </p>
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TypeEnum.TypeName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit/"+item.QuestionID, "SurveyQuestions") |
-            @Html.ActionLink("Details", "Details/"+item.QuestionID ,"SurveyQuestions") |
-            @Html.ActionLink("Delete", "Delete/"+item.QuestionID, "SurveyQuestions")
-        </td>
-    </tr>
-}
-    <tr>
-        <td colspan="3"><p>
-    @Html.ActionLink("Create New", "Create/"+id,"SurveyQuestions")
-</p></td>
     </tr>
 
 </table>
