giver account now says giver

--- a/WebApplication4/Views/Manage/IndexGiver.cshtml
+++ b/WebApplication4/Views/Manage/IndexGiver.cshtml
@@ -13,7 +13,7 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <hr />
-    <h4>Survey Taker Account</h4>
+    <h4>Survey Giver Account</h4>
     <hr />
 
     <div class="accheader"><h4>User ID Number</h4></div>
