--- a/WebApplication4/Views/Manage/_Layoutgiver.cshtml
+++ b/WebApplication4/Views/Manage/_Layoutgiver.cshtml
@@ -26,7 +26,7 @@
                         @Html.ActionLink("View Created Surveys", "Index", "Surveys")
                     </li>
                     <li>
-                        @Html.ActionLink("Create a Survey", "Create", "SurveyGiver")
+                        @Html.ActionLink("Create a Survey", "Create", "Surveys")
                     </li>
                     @*
         <li>
