Several link updates, removed several other links, layout additions

--- a/WebApplication4/Views/Manage/Index.cshtml
+++ b/WebApplication4/Views/Manage/Index.cshtml
@@ -135,12 +135,13 @@
     <div class="accheader"><h4>Total Surveys Ever Made By All Users</h4></div>
     <div class="accinfo">
         <dd>
+
             @User.Identity.GetUserName()
 
         </dd>
     </div>
 
-    <div class="accheader"><h4>Total SUrveys You've Created</h4></div>
+    <div class="accheader"><h4>Total SUrveys You've Taken</h4></div>
     <div class="accinfo">
         <dd>
             @User.Identity.GetUserName()
@@ -155,7 +156,7 @@
 
         </dd>
     </div>
-    <div class="accheader"><h4>Total Questions You've Asked</h4></div>
+    <div class="accheader"><h4>Total Questions You've Answered</h4></div>
     <div class="accinfo">
         <dd>
             @User.Identity.GetUserName()
