--- a/WebApplication4/Views/Surveys/Index.cshtml
+++ b/WebApplication4/Views/Surveys/Index.cshtml
@@ -48,9 +48,9 @@
                 @Html.DisplayFor(modelItem => item.AspNetUser.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.SurveyID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.SurveyID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.SurveyID })
+                
+                @Html.ActionLink("Details", "Details", new { id = item.SurveyID }) 
+                
             </td>
         </tr>
     }
