--- a/WebApplication4/Views/SurveyMAQs/Create.cshtml
+++ b/WebApplication4/Views/SurveyMAQs/Create.cshtml
@@ -5,62 +5,65 @@
     var QuestionID = ViewBag.QuestionID;
     var QuestionText = ViewBag.QuestionText;
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>SurveyMAQ</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    @if ( QuestionID.GetType() == typeof(int))
-    {
-    <div class="form-group">
-        @Html.LabelFor(model => model.QuestionID, "Question", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @QuestionText
-            <input type="hidden" , name="QuestionID" value="@QuestionID" />
-        </div>
-    </div>
-    }
-    else
-    {
-    <div class="form-group">
-        @Html.LabelFor(model => model.QuestionID, "QuestionID", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("QuestionID", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.QuestionID, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    }
+    <div class="form-horizontal">
+        <h4>SurveyMAQ</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.ChoiceOrder, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ChoiceOrder, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ChoiceOrder, "", new { @class = "text-danger" })
-        </div>
-    </div>
+        @if (QuestionID.GetType() == typeof(int))
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.QuestionID, "Question", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @QuestionText
+                    <input type="hidden" , name="QuestionID" value="@QuestionID" />
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.QuestionID, "QuestionID", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("QuestionID", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.QuestionID, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ChoiceOrder, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ChoiceOrder, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ChoiceOrder, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
