--- a/WebApplication4/Views/SurveyMAQs/Delete.cshtml
+++ b/WebApplication4/Views/SurveyMAQs/Delete.cshtml
@@ -3,7 +3,9 @@
 @{
     ViewBag.Title = "Delete";
 }
-
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -37,7 +39,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
