--- a/WebApplication4/Views/SurveyTaker/Details.cshtml
+++ b/WebApplication4/Views/SurveyTaker/Details.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Details";
+    @*ViewBag.Count = SurveySaysdb2.Surveys.SqlQuery(" SELECT * FROM dbo.Surveys Where SurveyID = 'true' ").Count();
+    db.AspNetUsers.Where)()*@
 }
 
 <h2>Details</h2>
@@ -9,9 +11,11 @@
 <div>
     <h4>Survey</h4>
     <hr />
+    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
+
         </dt>
 
         <dd>
