--- a/WebApplication4/Views/Manage/IndexGiver.cshtml
+++ b/WebApplication4/Views/Manage/IndexGiver.cshtml
@@ -3,6 +3,15 @@
 @model WebApplication4.Models.IndexGiverViewModel
 @{
     ViewBag.Title = "Manage";
+
+    var TotalUsers = ViewBag.TotalUsers;
+    var Count = ViewBag.NumSurveys;
+    var CountAllQuestions = ViewBag.NumQuestions;
+    var CountAllSurveysTaken = ViewBag.NumTakenSurveys;
+
+
+    var CountMySurveys = ViewBag.NumMySurveys;
+    var CountMySurveysTaken = ViewBag.NumMyTakenSurveys;
 }
 @{
     Layout = "_Layoutgiver.cshtml";
@@ -33,14 +42,7 @@
 
         </dd>
     </div>
-    <div class="accheader"><h4>Email</h4></div>
 
-    <div class="accinfo">
-
-        <dd>
-            @Model.HasEmail.ToString()
-        </dd>
-    </div>
 
     <div class="accheader"><h4>Password</h4></div>
     <div class="accinfo">
@@ -136,40 +138,57 @@
         }
         </dd>*@
     <hr />
-    <h4>Statistics</h4>
+    <h4>General Statistics</h4>
     <hr />
+    <div class="accheader"><h4>Total Number of Users</h4></div>
+    <div class="accinfo">
+        <dd>
+            @TotalUsers
+        </dd>
+    </div>
+
     <div class="accheader"><h4>Total Surveys Ever Made By All Users</h4></div>
     <div class="accinfo">
         <dd>
-            @User.Identity.GetUserName()
-
+            @Count
         </dd>
     </div>
 
-    <div class="accheader"><h4>Total SUrveys You've Created</h4></div>
+    <div class="accheader"><h4>Total Surveys Taken by All Users</h4></div>
     <div class="accinfo">
         <dd>
-            @User.Identity.GetUserName()
+            @CountAllSurveysTaken
 
         </dd>
     </div>
 
-    <div class="accheader"><h4>Total Questions Asked By All User</h4></div>
+    <div class="accheader"><h4>Total Questions Asked By All Users</h4></div>
     <div class="accinfo">
         <dd>
-            @User.Identity.GetUserName()
+            @CountAllQuestions
 
         </dd>
     </div>
-    <div class="accheader"><h4>Total Questions You've Asked</h4></div>
+
+    <hr />
+    <h4>Personal Statistics</h4>
+    <hr />
+
+    <div class="accheader"><h4>Total Surveys You've Created</h4></div>
     <div class="accinfo">
         <dd>
-            @User.Identity.GetUserName()
+            @CountMySurveys
 
         </dd>
     </div>
 
+    <div class="accheader"><h4>Total Times Users Took Your Survey</h4></div>
+    <div class="accinfo">
+        <dd>
+            @CountMySurveysTaken
 
+        </dd>
+    </div>
 
 </div>
 
