Added forms for questions

--- a/WebApplication4/Views/SurveyTaker/MultipleChoice.cshtml
+++ b/WebApplication4/Views/SurveyTaker/MultipleChoice.cshtml
@@ -8,9 +8,15 @@
 <h2>MultipleChoice</h2>
 
 
-@foreach (var item in Model.SurveyMAQs.OrderBy(i => i.ChoiceOrder))
-{
-    <tr>
-        <td>@item.Text</td>
-    </tr>
-}
+<form method="post">
+    @foreach (var item in Model.SurveyMAQs.OrderBy(i => i.ChoiceOrder))
+    {
+
+        @item.Text
+        <input type="radio">
+        <br />
+
+
+    }
+    <input type="submit">
+</form>
