--- a/WebApplication4/Views/SurveyTaker/ShortAnswer.cshtml
+++ b/WebApplication4/Views/SurveyTaker/ShortAnswer.cshtml
@@ -5,7 +5,6 @@
 
 <h2>ShortAnswer</h2>
 
-@Html.DisplayFor()
-
+@Html.DisplayNameFor(model => model.SurveySAAs)
 
 <input type=textarea runat=server>
