Changed a single word

--- a/WebApplication4/Views/Surveys/Details.cshtml
+++ b/WebApplication4/Views/Surveys/Details.cshtml
@@ -63,7 +63,7 @@
             @q.Count
         </dd>
         <dt>
-            Numnber of Responses:
+            Total Responses:
         </dt>
         <dd>
             @num
