Forms added for questions

--- a/WebApplication4/Views/SurveyTaker/MultipleAnswer.cshtml
+++ b/WebApplication4/Views/SurveyTaker/MultipleAnswer.cshtml
@@ -3,10 +3,13 @@
 @{
     ViewBag.Title = "MultipleAnswer";
     var SurveyIDs = ViewBag.SurveyID;
+    string Quest = ViewBag.Question;
 }
 
 
-<h2>MultipleAnswer</h2>
+
+
+<h2>@Quest</h2>
 
 
     <form method="post">
@@ -20,7 +23,7 @@
 
            
         }
-        <input type="submit" >
+        <input type="submit" value="Submit" >
     </form>
 
 
