Added on to the short answer page

--- a/WebApplication4/Views/Account/Login.cshtml
+++ b/WebApplication4/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication4.Models.LoginViewModel
+﻿+@model WebApplication4.Models.LoginViewModel
 
 @{
     ViewBag.Title = "Survey Says";
