--- a/WebApplication4/Views/SurveyTaker/ShortAnswer.cshtml
+++ b/WebApplication4/Views/SurveyTaker/ShortAnswer.cshtml
@@ -7,4 +7,6 @@
 
 @Html.DisplayNameFor(model => model.SurveySAAs)
 
-<input type=textarea runat=server>
+<textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7"></textarea>
+
+<input type="submit">
