Fixed the login and added a delete view for survey questions

--- a/WebApplication4/Views/SurveyGiver/Index.cshtml
+++ b/WebApplication4/Views/SurveyGiver/Index.cshtml
@@ -7,7 +7,7 @@
     Layout = "_Layoutgiver.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Your Created Surveys</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", "Surveys")
