--- a/WebApplication4/Views/SurveyTaker/MultipleChoice.cshtml
+++ b/WebApplication4/Views/SurveyTaker/MultipleChoice.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "MultipleChoice";
     var SurveyIDs = ViewBag.SurveyID;
     string Quest = ViewBag.Question;
-
+    //Added to get letters in front of the answer
+    char letter = Convert.ToChar(065);
+    string blank = ". ";
 }
 
 <h2>@Quest</h2>
@@ -13,11 +15,13 @@
 <form method="post">
     @foreach (var item in Model.SurveyMAQs.OrderBy(i => i.ChoiceOrder))
     {
-
+        <input type="radio" name ="Multi">
+        @letter
+        @blank
         @item.Text
-        <input type="radio">
+        
         <br />
-
+        letter ++;
 
     }
     <input type="submit" value="submit">
