--- a/WebApplication4/Views/SurveyTaker/ShortAnswer.cshtml
+++ b/WebApplication4/Views/SurveyTaker/ShortAnswer.cshtml
@@ -10,6 +10,6 @@
 
 
 <form method="post">
-    <input type="text" />
-    <textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7"></textarea>
+    <textarea class="form-control" type="textarea" placeholder="Enter answer here . . ." rows="7" cols="100000"></textarea>
     </form>
+<input type="submit" value="submit">
