--- a/WebApplication4/Views/Surveys/Create.cshtml
+++ b/WebApplication4/Views/Surveys/Create.cshtml
@@ -8,7 +8,7 @@
     Layout = "_Layoutgiver.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create a Survey</h2>
 
 
 @using (Html.BeginForm())
@@ -16,7 +16,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Survey</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
