--- a/WebApplication4/Views/SurveyTaker/TakeSurvey.cshtml
+++ b/WebApplication4/Views/SurveyTaker/TakeSurvey.cshtml
@@ -2,16 +2,17 @@
 @{
 
     var id = ViewBag.SurveyID;
+    string q = "Questions";
     
 }
 
-<h2>TakeSurvey</h2>
+<h3>TakeSurvey</h3>
 
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Text)
+            @q
         </th>
 
         <th></th>
