--- a/WebApplication4/Views/SurveyTaker/StartSurvey.cshtml
+++ b/WebApplication4/Views/SurveyTaker/StartSurvey.cshtml
@@ -5,5 +5,6 @@
 }
 
 <h2>StartSurvey</h2>
-@Html.ActionLink("Start","Take", new { id = SurveyID })
+
+@Html.ActionLink("Start", "Take/", new { id = SurveyID })
 
